force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FlexpointConversionMode__c.field-meta.xml
<CustomField>
    <fullName>FlexpointConversionMode__c</fullName>
    <description>Flexpoint Conversion Mode</description>
    <label>Flexpoint Conversion Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Value</fullName>
            </value>
            <value>
                <fullName>Factor</fullName>
            </value>
            <value>
                <fullName>Multiplier</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>