force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FlexpointExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>FlexpointExpirationDate__c</fullName>
    <description>Flexpoint Expiration Date</description>
    <label>Flexpoint Expiration Date</label>
    <type>Date</type>
</CustomField>