force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FlexpointFieldName__c.field-meta.xml
<CustomField>
    <fullName>FlexpointFieldName__c</fullName>
    <description>Flexpoint Field Name</description>
    <label>Flexpoint Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>