force-app/main/default/objects/FieloPLT__ChallengeReward__c/fields/FlexpointMonthsUntilExpiration__c.field-meta.xml
<CustomField>
    <fullName>FlexpointMonthsUntilExpiration__c</fullName>
    <description>Flexpoint Expiration Field</description>
    <label>Flexpoint Expiration Field</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>